# hub12-controller

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
hardware/: buffer.kicad_sch  connectors.kicad_sch  hub12-controller-hw.kicad_pcb  hub12-controller-hw.kicad_pro  hub12-controller-hw.kicad_sch  level_shifters.kicad_sch  pi_pico.kicad_sch  sym-lib-table
software/: LICENSE  main.py
src/: debug.c  debug.h  hub12.c  hub12.h  hub12.pio  main.c  usb.c  usb.h
